[gd_scene load_steps=8 format=3 uid="uid://1771o822402k"]

[ext_resource type="Script" path="res://Scripts/MainMenu.gd" id="1_vpbrq"]
[ext_resource type="Shader" path="res://Shaders/MainMenu.gdshader" id="2_duqfj"]
[ext_resource type="Texture2D" uid="uid://b8xb1wko766uj" path="res://Sprites/icon.svg" id="3_svuxn"]
[ext_resource type="FontFile" uid="uid://c7x1fkfgyftgd" path="res://Fonts/BruceForeverRegular-X3jd2.ttf" id="4_ptai0"]
[ext_resource type="Script" path="res://Scripts/Settings.gd" id="5_cp75b"]
[ext_resource type="Script" path="res://Scripts/Exit.gd" id="6_qe2kx"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6yqbq"]
shader = ExtResource("2_duqfj")
shader_parameter/speed = 0.02
shader_parameter/scale = Vector2(16, 16)
shader_parameter/rotate_speed = 1.1
shader_parameter/line_width = 0.41
shader_parameter/line_size = 0.115
shader_parameter/back_color = Color(0, 0, 0, 1)
shader_parameter/line_color = Color(0.188235, 0.0901961, 0.0941176, 1)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vpbrq")

[node name="Sprite2D2" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_6yqbq")
position = Vector2(1190, 856.5)
scale = Vector2(51.1406, 31.0547)
texture = ExtResource("3_svuxn")

[node name="MainMenu" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Play" type="Button" parent="MainMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -295.0
offset_top = -60.0
offset_right = 295.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_ptai0")
theme_override_font_sizes/font_size = 48
text = "Play"

[node name="Settings" type="Button" parent="MainMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -295.0
offset_top = 70.0
offset_right = 295.0
offset_bottom = 190.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_ptai0")
theme_override_font_sizes/font_size = 48
text = "Settings"
script = ExtResource("5_cp75b")

[node name="Exit" type="Button" parent="MainMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -295.0
offset_top = 200.0
offset_right = 295.0
offset_bottom = 320.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_ptai0")
theme_override_font_sizes/font_size = 48
text = "Exit"
script = ExtResource("6_qe2kx")

[node name="Sprite2D" type="Sprite2D" parent="MainMenu"]
position = Vector2(372, 122)
scale = Vector2(0.179687, 0.179687)

[node name="Sprite2D2" type="Sprite2D" parent="MainMenu"]
position = Vector2(584, 120)
scale = Vector2(0.179687, 0.179687)

[node name="Sprite2D3" type="Sprite2D" parent="MainMenu"]
position = Vector2(796, 117)
scale = Vector2(0.179687, 0.179687)

[node name="ServerMenu" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ItemList" type="ItemList" parent="ServerMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 600.0
offset_top = 47.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hovered_color = Color(0.321569, 0.52549, 1, 1)
theme_override_colors/font_selected_color = Color(0, 0.643137, 0, 1)
theme_override_fonts/font = ExtResource("4_ptai0")
theme_override_font_sizes/font_size = 18
item_count = 1
item_0/text = "Localhost 127.0.0.1:25565"

[node name="Join" type="Button" parent="ServerMenu"]
layout_mode = 0
offset_right = 590.0
offset_bottom = 120.0
theme_override_fonts/font = ExtResource("4_ptai0")
theme_override_font_sizes/font_size = 48
text = "Join by IP"

[node name="HostMenuOpen" type="Button" parent="ServerMenu"]
layout_mode = 0
offset_top = 130.0
offset_right = 590.0
offset_bottom = 250.0
theme_override_fonts/font = ExtResource("4_ptai0")
theme_override_font_sizes/font_size = 48
text = "Host a game"

[node name="Return" type="Button" parent="ServerMenu"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -120.0
offset_right = 590.0
grow_vertical = 0
theme_override_fonts/font = ExtResource("4_ptai0")
theme_override_font_sizes/font_size = 48
text = "Main Menu"

[node name="DirectJoinMenu" type="Control" parent="ServerMenu"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="ServerMenu/DirectJoinMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -198.0
offset_top = -64.0
offset_right = 198.98
offset_bottom = 73.02
grow_horizontal = 2
grow_vertical = 2

[node name="IpEdit" type="LineEdit" parent="ServerMenu/DirectJoinMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_top = -15.5
offset_right = 88.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
text = "127.0.0.1"
placeholder_text = "Ip"

[node name="PortEdit" type="LineEdit" parent="ServerMenu/DirectJoinMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 94.0
offset_top = -15.5
offset_right = 182.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
text = "25565"
placeholder_text = "Port"

[node name="Connect" type="Button" parent="ServerMenu/DirectJoinMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -181.5
offset_top = 18.0
offset_right = 181.5
offset_bottom = 49.0
grow_horizontal = 2
grow_vertical = 2
text = "Connect"

[node name="Close" type="Button" parent="ServerMenu/DirectJoinMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 138.0
offset_top = -49.0
offset_right = 181.0
offset_bottom = -18.0
grow_horizontal = 2
grow_vertical = 2
text = "X"

[node name="Label" type="Label" parent="ServerMenu/DirectJoinMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -179.0
offset_top = -48.0
offset_right = -108.0
offset_bottom = -22.0
grow_horizontal = 2
grow_vertical = 2
text = "Join by ip"

[node name="HostMenu" type="Control" parent="ServerMenu"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="ServerMenu/HostMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.0
offset_top = -26.0
offset_right = 224.0
offset_bottom = 63.0
grow_horizontal = 2
grow_vertical = 2

[node name="PortEdit" type="LineEdit" parent="ServerMenu/HostMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -209.0
offset_top = -15.5
offset_right = -110.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
text = "25565"
placeholder_text = "Port"

[node name="PlayerCountEdit" type="LineEdit" parent="ServerMenu/HostMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -103.0
offset_top = -15.5
offset_right = -4.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
text = "8"
placeholder_text = "Max players"

[node name="Host" type="Button" parent="ServerMenu/HostMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -211.0
offset_top = 19.0
offset_right = 211.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
text = "Create a server"

[node name="HostClose" type="Button" parent="ServerMenu/HostMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 181.0
offset_top = -16.0
offset_right = 210.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
text = "X"

[node name="ServerNameLineEdit" type="LineEdit" parent="ServerMenu"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -548.0
offset_right = -364.0
offset_bottom = 31.0
grow_horizontal = 0
placeholder_text = "Server name (Local)"

[node name="IpLineEdit" type="LineEdit" parent="ServerMenu"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -359.0
offset_right = -175.0
offset_bottom = 31.0
grow_horizontal = 0
placeholder_text = "IP Adress"

[node name="PortLineEdit" type="LineEdit" parent="ServerMenu"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -169.0
offset_right = -85.0
offset_bottom = 31.0
grow_horizontal = 0
placeholder_text = "Port"

[node name="RemoveServerFromList" type="Button" parent="ServerMenu"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -30.0
offset_bottom = 30.0
grow_horizontal = 0
text = "-"

[node name="AddServerToList" type="Button" parent="ServerMenu"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -71.0
offset_right = -41.0
offset_bottom = 30.0
grow_horizontal = 0
text = "+"

[node name="SettingsMenu" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TabContainer" type="TabContainer" parent="SettingsMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="User" type="Control" parent="SettingsMenu/TabContainer"]
visible = false
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="SettingsMenu/TabContainer/User"]
layout_mode = 1
offset_left = 9.0
offset_top = 41.0
offset_right = 314.0
offset_bottom = 72.0
placeholder_text = "Username"

[node name="Label" type="Label" parent="SettingsMenu/TabContainer/User"]
layout_mode = 1
offset_left = 10.0
offset_top = 15.0
offset_right = 95.0
offset_bottom = 41.0
text = "Username:"

[node name="Graphics" type="Control" parent="SettingsMenu/TabContainer"]
visible = false
layout_mode = 2

[node name="CheckButton" type="CheckButton" parent="SettingsMenu/TabContainer/Graphics"]
layout_mode = 1
offset_left = 11.0
offset_top = 32.0
offset_right = 153.0
offset_bottom = 72.0
text = "Fullscreen"

[node name="Audio" type="Control" parent="SettingsMenu/TabContainer"]
visible = false
layout_mode = 2

[node name="Controls" type="Control" parent="SettingsMenu/TabContainer"]
visible = false
layout_mode = 2

[node name="CloseButton" type="Button" parent="SettingsMenu"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -32.0
offset_bottom = 32.0
grow_horizontal = 0
text = "X"

[connection signal="pressed" from="MainMenu/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MainMenu/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="MainMenu/Exit" to="." method="_on_exit_pressed"]
[connection signal="focus_exited" from="ServerMenu" to="." method="_on_server_menu_focus_exited"]
[connection signal="item_activated" from="ServerMenu/ItemList" to="." method="_on_item_list_item_activated"]
[connection signal="ready" from="ServerMenu/ItemList" to="." method="_on_item_list_ready"]
[connection signal="pressed" from="ServerMenu/Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="ServerMenu/HostMenuOpen" to="." method="_on_host_menu_open_pressed"]
[connection signal="pressed" from="ServerMenu/Return" to="." method="_on_return_pressed"]
[connection signal="pressed" from="ServerMenu/DirectJoinMenu/Connect" to="." method="_on_connect_pressed"]
[connection signal="pressed" from="ServerMenu/DirectJoinMenu/Close" to="." method="_on_close_pressed"]
[connection signal="pressed" from="ServerMenu/HostMenu/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="ServerMenu/HostMenu/HostClose" to="." method="_on_host_close_pressed"]
[connection signal="pressed" from="ServerMenu/RemoveServerFromList" to="." method="_on_remove_server_from_list_pressed"]
[connection signal="pressed" from="ServerMenu/AddServerToList" to="." method="_on_add_server_to_list_pressed"]
[connection signal="tab_selected" from="SettingsMenu/TabContainer" to="." method="_on_tab_container_tab_selected"]
[connection signal="focus_entered" from="SettingsMenu/TabContainer/User" to="." method="_on_user_focus_entered"]
[connection signal="ready" from="SettingsMenu/TabContainer/User" to="." method="_on_user_ready"]
[connection signal="pressed" from="SettingsMenu/TabContainer/Graphics/CheckButton" to="." method="_on_check_button_pressed"]
[connection signal="ready" from="SettingsMenu/TabContainer/Graphics/CheckButton" to="." method="_on_check_button_ready"]
[connection signal="button_down" from="SettingsMenu/CloseButton" to="." method="_on_close_button_button_down"]
[connection signal="pressed" from="SettingsMenu/CloseButton" to="." method="_on_close_button_pressed"]
